--- a/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
+++ b/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Grapevine" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="Grapevine" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -57,7 +57,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Led-BA-NMm" kind="show" id="jTx-9m-Paz"/>
+                                    <segue destination="Led-BA-NMm" kind="show" identifier="loginSegue" id="jTx-9m-Paz"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RPP-wG-TD6">
@@ -69,6 +69,9 @@
                                 <state key="normal" title="Create Account">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="omL-Zz-hpD" kind="presentation" id="h10-xp-4M7"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Grapevine" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yq8-56-HcA">
                                 <rect key="frame" x="211" y="20" width="179" height="48"/>
@@ -79,6 +82,10 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="wWH-8R-4yE">
+                                <rect key="frame" x="282" y="507" width="37" height="37"/>
+                                <color key="color" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -98,9 +105,138 @@
                             <constraint firstAttribute="centerX" secondItem="CHN-9D-RWW" secondAttribute="centerX" id="vkY-T1-o9N"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="activityIndicator" destination="wWH-8R-4yE" id="h2b-Nd-p78"/>
+                        <outlet property="createAccountButton" destination="RPP-wG-TD6" id="Cdv-r9-2NT"/>
+                        <outlet property="loginButton" destination="CHN-9D-RWW" id="dkB-BM-PWY"/>
+                        <outlet property="passwordLabel" destination="0Mx-zS-qEm" id="6dn-5o-cw3"/>
+                        <outlet property="passwordTextField" destination="QSt-EZ-b3c" id="Lep-l1-guJ"/>
+                        <outlet property="usernameLabel" destination="jMu-mm-47V" id="NFO-TQ-78K"/>
+                        <outlet property="usernameTextField" destination="4C9-R4-X1O" id="fKa-uz-t5U"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+        </scene>
+        <!--Create Account View Controller-->
+        <scene sceneID="d4N-S4-fGV">
+            <objects>
+                <viewController id="omL-Zz-hpD" customClass="CreateAccountViewController" customModule="Grapevine" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="b3x-u6-3jB"/>
+                        <viewControllerLayoutGuide type="bottom" id="7bc-4y-Tht"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="SYw-iz-HcQ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create Account" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mDc-hZ-yDl">
+                                <rect key="frame" x="218" y="28" width="165" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="165" id="3cS-GY-YDY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pvA-5T-EDj">
+                                <rect key="frame" x="55" y="77" width="491" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="491" id="sA8-V1-mS6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HDf-zf-Tan">
+                                <rect key="frame" x="55" y="153" width="491" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="491" id="V8P-4q-Q5v"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jg8-xd-Hsb">
+                                <rect key="frame" x="55" y="115" width="491" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="491" id="85t-Z3-ODP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qao-EI-2US">
+                                <rect key="frame" x="55" y="267" width="491" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="491" id="oBb-ZP-PFr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IEO-xD-UKg">
+                                <rect key="frame" x="55" y="191" width="491" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="491" id="b98-ac-9E7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Repeat Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="24K-6X-3gN">
+                                <rect key="frame" x="55" y="229" width="491" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="491" id="8PN-0S-vgs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7LJ-RV-8z8">
+                                <rect key="frame" x="235" y="305" width="130" height="30"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="130" id="iQ2-3t-SWo"/>
+                                </constraints>
+                                <state key="normal" title="Create Account">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rBR-CC-OSa">
+                                <rect key="frame" x="277" y="343" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="Tjo-vc-DYj"/>
+                                </constraints>
+                                <state key="normal" title="Back">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="23K-R9-8ua" kind="unwind" unwindAction="backToLoginViewController:" id="k9T-kD-KQ2"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="HDf-zf-Tan" secondAttribute="centerX" id="2oT-ur-Kl8"/>
+                            <constraint firstItem="7LJ-RV-8z8" firstAttribute="top" secondItem="qao-EI-2US" secondAttribute="bottom" constant="8" id="CiQ-8Z-8sU"/>
+                            <constraint firstItem="rBR-CC-OSa" firstAttribute="top" secondItem="7LJ-RV-8z8" secondAttribute="bottom" constant="8" id="GHl-My-aym"/>
+                            <constraint firstAttribute="centerX" secondItem="pvA-5T-EDj" secondAttribute="centerX" id="Llu-Wq-RDg"/>
+                            <constraint firstAttribute="centerX" secondItem="qao-EI-2US" secondAttribute="centerX" id="QHw-eO-GqG"/>
+                            <constraint firstAttribute="centerX" secondItem="7LJ-RV-8z8" secondAttribute="centerX" id="YKJ-Um-nIC"/>
+                            <constraint firstItem="jg8-xd-Hsb" firstAttribute="top" secondItem="pvA-5T-EDj" secondAttribute="bottom" constant="8" id="dys-FH-nAy"/>
+                            <constraint firstAttribute="centerX" secondItem="mDc-hZ-yDl" secondAttribute="centerX" id="dzw-IV-hCZ"/>
+                            <constraint firstItem="mDc-hZ-yDl" firstAttribute="top" secondItem="b3x-u6-3jB" secondAttribute="bottom" constant="8" id="ewj-ih-4h0"/>
+                            <constraint firstItem="pvA-5T-EDj" firstAttribute="top" secondItem="mDc-hZ-yDl" secondAttribute="bottom" constant="28" id="gpf-yh-djV"/>
+                            <constraint firstAttribute="centerX" secondItem="24K-6X-3gN" secondAttribute="centerX" id="l6k-EX-TcB"/>
+                            <constraint firstAttribute="centerX" secondItem="jg8-xd-Hsb" secondAttribute="centerX" id="m1b-q0-Che"/>
+                            <constraint firstItem="24K-6X-3gN" firstAttribute="top" secondItem="IEO-xD-UKg" secondAttribute="bottom" constant="8" id="ndx-Ez-mti"/>
+                            <constraint firstItem="IEO-xD-UKg" firstAttribute="top" secondItem="HDf-zf-Tan" secondAttribute="bottom" constant="8" id="qx6-xI-fRj"/>
+                            <constraint firstItem="qao-EI-2US" firstAttribute="top" secondItem="24K-6X-3gN" secondAttribute="bottom" constant="8" id="wS7-3d-5V7"/>
+                            <constraint firstItem="HDf-zf-Tan" firstAttribute="top" secondItem="jg8-xd-Hsb" secondAttribute="bottom" constant="8" id="xzt-Au-A1Q"/>
+                            <constraint firstAttribute="centerX" secondItem="rBR-CC-OSa" secondAttribute="centerX" id="y7P-hj-G3e"/>
+                            <constraint firstAttribute="centerX" secondItem="IEO-xD-UKg" secondAttribute="centerX" id="y8R-oe-tXJ"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mef-dE-V9m" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="23K-R9-8ua" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="445" y="1117"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="AhA-rh-Qva">
@@ -110,6 +246,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <toolbar key="tableFooterView" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="2nE-Cu-V4L">
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <items>
+                                <barButtonItem style="plain" systemItem="flexibleSpace" id="zNs-dh-ihv"/>
+                                <barButtonItem systemItem="add" id="DO4-1p-hVv"/>
+                                <barButtonItem style="plain" systemItem="flexibleSpace" id="mVi-Wp-5to"/>
+                                <barButtonItem title="Calendar" id="l0u-a8-640"/>
+                                <barButtonItem style="plain" systemItem="flexibleSpace" id="jId-Wa-R7K"/>
+                                <barButtonItem title="Settings" id="jHb-2c-gVp"/>
+                                <barButtonItem style="plain" systemItem="flexibleSpace" id="OQE-fE-w9h"/>
+                            </items>
+                        </toolbar>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Fd9-R5-uwG">
                                 <autoresizingMask key="autoresizingMask"/>
@@ -126,7 +275,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V2p-or-2S4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1246" y="352"/>
+            <point key="canvasLocation" x="1252" y="409"/>
         </scene>
     </scenes>
 </document>
