Add event feed screen and set up http requests with Volley.

--- a/clients/Android/Grapevine/app/src/main/res/layout/activity_main_login.xml
+++ b/clients/Android/Grapevine/app/src/main/res/layout/activity_main_login.xml
@@ -64,6 +64,11 @@
                 android:text="@string/login_create_account"
                 android:onClick="launchCreateAccountActivity"/>
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="bypass login"
+                android:onClick="bypassLogin"/>
         </LinearLayout>
     </ScrollView>
 
